# Movie-Recommendation-System

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakelists.txt  LICENSE  Makefile  MovieRecommendatoinSystem  MySQLConnect  authUI.cpp  authUI.h  authentication.cpp  authentication.h  cmake_install.cmake  db.cpp  db.h  main.cpp  movie.h  movieApiController.cpp  movieApiController.h  movieFetch.cpp  movieFetch.h  qml.qrc  user.h  userController.cpp  viewMovies.h
.cmake/api/v1/reply/: cache-v2-2bcc8362d9403fdee6cc.json  cache-v2-4cb328b07f19f537648d.json  cache-v2-ffbeb1665c3da9b8b84d.json  cmakeFiles-v1-40fb63a6eabbda9c40ce.json  cmakeFiles-v1-68fc53e9d30cf85e8f29.json  codemodel-v2-225bfd3f4e91c0b68f4b.json  codemodel-v2-b881acfb4c3da642ecb7.json  codemodel-v2-f5e7f97b59f784319588.json  index-2023-06-14T09-11-50-0127.json  index-2023-06-14T10-08-19-0704.json  index-2023-06-15T08-56-23-0456.json  target-MovieRecommendatoinSystem-8d9e8199038da9d9b75c.json  target-MovieRecommendatoinSystem-9618d2a5e5b39cb18ce0.json  target-MovieRecommendatoinSystem-d407aa2eac436c7adb76.json
include/: Engine.h  db.h  engine.h
include/controllers/: authenticationController.h  movieApiController.h  movieController.h  ratingController.h  userController.h
include/models/: movie.h  user.h
src/: Engine.cpp  UBCF.cpp  db.cpp  main.cpp  test.cpp  testUBCF.cpp
src/RecommendationEngines/: ContentBasedFiltering.cpp  PopularityBasedFiltering.cpp  UserBasedCollaborativeFiltering.cpp
src/controllers/: authenticationController.cpp  movieApiController.cpp  movieController.cpp  ratingController.cpp  userController.cpp
src/models/: movie.cpp  user.cpp
src/qml/: Login.qml  Movie.qml  MovieGrid.qml  MovieList.qml  NavBar.qml  SearchBar.qml  Signup.qml  main.qml
src/views/: movieView.cpp  viewMovies.cpp
